Fri Sep 10 16:43:39 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Makefile.am: Removed references to files removed at
         Thu Sep  9 11:14:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

Fri Sep 10 11:07:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ace/TSS_T.h:
          Resolved compile issue regarding ACE_Copy_Disabled class.

Fri Sep 10 07:36:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ace/Thread_Control.inl:
          Include before versioning macros.

Fri Sep 10 07:05:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ace/Thread_Control.inl:
          Resolved compile error (ACE_OS_TRACE could not be found).

Thu Sep  9 12:53:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_Acceptor.h:
        * ace/Asynch_Acceptor.cpp:
        * ace/Hash_Multi_Map_Manager_T.h:
        * ace/OS_NS_Thread.h:
        * ace/OS_NS_Thread.cpp:
        * ace/Service_Config.cpp:
        * ace/TSS_T.cpp:
        * ace/Thread.h:
        * ace/Thread.inl:
        * ace/config-macosx-snowleopard.h:
        * ace/config-macosx-tiger.h:
        * ace/config-macosx.h:
        * tests/Hash_Multi_Map_Manager_Test.cpp:
          Removed deprecated methods and arguments

        * docs/FAQ:
        * FAQ:
          Moved to docs

Thu Sep  9 11:54:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/soreduce/Signature.cpp:
        * tests/TkReactor_Test.cpp:
          Fixed fuzz

Thu Sep  9 11:49:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Removed invalid colon, thanks to Frank Preischl
          <Frank dot Preischl at ids dot de> for reporting this

Thu Sep  9 11:14:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Kokyu/Dispatch_Deferrer.h:

        * ace/Atomic_Op_T.h:
        * ace/Atomic_Op_T.inl:
        * ace/Configuration.h:
        * ace/Configuration.cpp:
        * ace/Default_Constants.h: