@@ -64,6 +64,12 @@ sub fill_value {
     return ((defined $incs && $incs =~ /ciao/i) ||
             (defined $libs && $libs =~ /ciao/i));
   }
+  elsif ($name eq 'dance') {
+    my($incs) = $self->get_assignment('includes');
+    my($libs) = $self->get_assignment('libpaths');
+    return ((defined $incs && $incs =~ /DAnCE/i) ||
+            (defined $libs && $libs =~ /DAnCE/i));
+  }
   elsif ($name eq 'genins') {
     my $ins = '';
     $self->get_install_info(sub { $ins .= '#' . $_[0] });
