@@ -1,3 +1,10 @@
+Sun Sep 12 19:22:21 UTC 2010  William Otte  <wotte@zifnab>
+
+        * bin/MakeProjectCreator/modules/GNUACEProjectCreator.pm:
+        *        bin/MakeProjectCreator/templates/:
+
+          Added rules to pullin rules.dance.GNU.
+
 Fri Sep 10 16:43:39 UTC 2010  Steve Huston  <shuston@riverace.com>
 
         * ace/Makefile.am: Removed references to files removed at
